update css animation in the lyft business section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -426,22 +426,14 @@
 
     <section class='lyft-business-container'>
       <img src='./images/Lyft_Business_Pink.webp' class='lyft-business-logo'>
-      <h3 class='we-help-you'>We help you move your</h3>
-      <div>
-        <span>employees</span>
-        <span>VIPs</span>
-        <span>customers</span>
-        <span>ideas</span>
-        <span>interviewees</span>
-        <span>visitors</span>
-        <span>students</span>
-        <span>patients</span>
-        <span>guests</span>
-        <span>essential goods</span>
-        <span>prospects</span>
-        <span>supplies</span>
-        <span>people</span>
-        <span>business</span>
+      <div class='slider'>
+        <div class='we-help-you'>We help you move your
+          <div class='text-box'>
+            <span>employees</span>
+            <span>VIPs</span>
+            <span>customers</span>
+          </div>
+        </div>
       </div>
       <p>Affordable transportation solutions, effortless payments, and getting all the right people to all the right
         places. So you can get work done.</p>
@@ -464,7 +456,7 @@
         <li>Safety</li>
         <li>Application Requirements</li>
         <li>Express Drive</li>
-        <li>Bouns</li>
+        <li>Bonus</li>
         <li>Lyft Rewards</li>
         <li>Driving Opportunities</li>
         <li>Insurance</li>
